--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "axios": "^1.6.1",
     "colors": "^1.4.0",
     "commander": "^11.1.0",
+    "fastify": "^4.24.3",
     "figlet": "^1.7.0",
     "readline": "^1.3.0"
   }
